--- a/equathora/src/components/ProblemCard.css
+++ b/equathora/src/components/ProblemCard.css
@@ -16,7 +16,7 @@
 
 .problem-card:hover{
     transform: scale(1.02);
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .problem-card{
