--- a/equathora/src/pages/Achievements/AchievementsLayout.css
+++ b/equathora/src/pages/Achievements/AchievementsLayout.css
@@ -124,7 +124,6 @@
 
 #freepik-link {
 	display: flex;
-	width: 100vw;
 	align-items: center;
 	justify-content: center;
 	font-size: 1rem;
