--- a/equathora/src/pages/Dashboard.css
+++ b/equathora/src/pages/Dashboard.css
@@ -5,8 +5,6 @@
 }
 
 #hero-dashboard {
-    width: 100vw;
-    height: auto;
     display: flex;
     align-items: flex-start;
     justify-content: center;
